Formatowanie prostych stron html i formularza

--- a/Z1.html
+++ b/Z1.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Prosta lista</title>
+    <link rel="stylesheet" href="Z1.css">
 </head>
 <body>
     <h1>Poznaj moje ulubione języki programowania</h1>
