--- a/Z2.html
+++ b/Z2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Prosta lista 2</title>
+    <link rel="stylesheet" href="Z2.css"> 
 </head>
 <body>
     <h1>Zadania do zrobienia</h1>
@@ -15,7 +16,7 @@
         <ul>
             <li>Opracować zakres</li>
             <li>Podzielić zadania</li>
-            <li>Pzygodować harmonogram</li>
+            <li>Przygotować harmonogram</li>
             <li>Wprowadzić zmiany do Trelo</li>
         </ul>
         <li>Spotkać się z Justyną</li>
